# nexdario

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker.yml
migrations/: 001_initial.sql  002_location_networks_asset_types.sql  003_location_extra_fields.sql
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  permissions.rs  state.rs
src/jobs/: mod.rs
src/routes/: asset_types.rs  assets.rs  auth.rs  backup.rs  changes.rs  contacts.rs  customers.rs  dashboard.rs  employees.rs  invoices.rs  locations.rs  mod.rs  quotes.rs  recovery.rs  roles.rs  secrets.rs  service_jobs.rs  users.rs  wan.rs
src/services/: audit.rs  backup.rs  encryption.rs  mod.rs  naming.rs
static/: app.css
templates/: base.html  dashboard.html  login.html
templates/asset_types/: list.html
templates/assets/: detail.html  form.html  list.html
templates/backup/: index.html
templates/changes/: detail.html  form.html  list.html
templates/contacts/: detail.html  form.html  list.html
templates/customers/: detail.html  form.html  list.html
templates/employees/: detail.html  form.html  list.html
templates/invoices/: detail.html  form.html  list.html
templates/locations/: detail.html  form.html  list.html
templates/quotes/: detail.html  form.html  list.html
templates/recovery/: index.html  success.html
templates/roles/: detail.html  form.html  list.html
templates/secrets/: access_denied.html  access_token_form.html  access_view.html  detail.html  form.html  list.html  reveal.html  token_created.html
templates/users/: detail.html  (+3 more)
(+10 files in other folders)
